--- a/style.css
+++ b/style.css
@@ -35,3 +35,24 @@ button {
   border-radius: 5px;
   box-shadow: 2px 5px 5px #333;
 }
+
+h4{
+  text-align: center;
+}
+
+#input2{
+  display: flex;
+  margin: 0px auto;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5px;
+ 
+}
+
+#select{
+  display: flex;
+  margin: 0px auto;
+  justify-content: center;
+  align-items: center;
+}
+
